--- a/docs/history/_components/changelogs/20250630.md
+++ b/docs/history/_components/changelogs/20250630.md
@@ -10,4 +10,4 @@
 RZ/G2L Linux BSP Plus v1.0 is available.
 
 * [Kernel 6.12](https://www.kernel.org/doc/html/v6.12/){: target=_blank }
-* [Yocto 5.0 (Scrathgap)](https://docs.yoctoproject.org/next/migration-guides/release-5.0.html){: target=_blank }
+* [Yocto 5.0 (Scarthgap)](https://docs.yoctoproject.org/next/migration-guides/release-5.0.html){: target=_blank }
