rz bsp plus: Add Kernel info in What's new.
Signed-off-by: Yusuke Akiyama <yusuke.akiyama.jy@renesas.com>

--- a/docs/history/_components/changelogs/20250630.md
+++ b/docs/history/_components/changelogs/20250630.md
@@ -1,13 +1,15 @@
 {% if render_title %}
 
-## *RZ/G2L Linux BSP Plus v1.0*
+## *RZ Linux BSP Plus for Kernel 6.12 v1.0*
 
 {% endif %}
 
 2025/06/30
 {: .right .small }
 
-RZ/G2L Linux BSP Plus v1.0 is available.
+RZ Linux BSP Plus for Kernel 6.12 v1.0 is available.
+
+Target Device : RZ/G2L
 
 * [Kernel 6.12](https://www.kernel.org/doc/html/v6.12/){: target=_blank }
 * [Yocto 5.0 (Scarthgap)](https://docs.yoctoproject.org/next/migration-guides/release-5.0.html){: target=_blank }
